Workspace selection menu styling completed

--- a/static/styles.scss
+++ b/static/styles.scss
@@ -121,28 +121,6 @@ NAVBAR
   color: $text-on-theme-dark;
 }
 
-.dropdown-menu {
-  background-color: $theme-dark;
-  color: $text-on-theme-dark;
-  font-weight: 700;
-  min-width: 200px;
-
-  a {
-    background-color: $theme-dark;
-    color: $text-on-theme-dark;
-    font-weight: 700;
-  }
-
-  p {
-    font-size: 14px;
-    margin-left: 24px;
-    margin-right: 24px;
-    margin-bottom: 0;
-    color: $highlight-dark;
-    font-weight: 400;
-  }
-}
-
 /*
 ==========================
 SIDE NAV
@@ -184,28 +162,35 @@ SIDE NAV
     }
 
     .dropdown-menu {
-      width: 100% !important;
+      background-color: $theme-dark;
+      color: $text-on-theme-dark;
+      font-weight: 700;
+      width: 140px;
     }
 
     .dropdown-menu.show {
-      left: 40px !important;
-      width: 100% !important;
+      left: 0 !important;
       font-weight: 400;
       font-size: 16px;
       line-height: 16px;
-      margin-left: 100px;
       border: 1px solid white;
 
       .dropdown-header {
-          padding: 2px 4px;
-          color: #fff;
-          font-weight: 300;
-          font-size: 16px;
-          line-height: 16px;
+        color: $text-on-theme-dark;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 14px;
+        padding: 2px 4px;
       }
 
       .dropdown-item {
-          padding: 4px 4px;
+        color: $text-on-theme-dark;
+        font-weight: 700;
+        padding: 4px 4px;
+      }
+
+      .dropdown-item:hover {
+        color: $highlight-dark;
       }
     }
   }
