--- a/static/styles.css
+++ b/static/styles.css
@@ -109,26 +109,6 @@ NAVBAR
   color: #e9ede6;
 }
 
-.dropdown-menu {
-  background-color: #16425b;
-  color: #e9ede6;
-  font-weight: 700;
-  min-width: 200px;
-}
-.dropdown-menu a {
-  background-color: #16425b;
-  color: #e9ede6;
-  font-weight: 700;
-}
-.dropdown-menu p {
-  font-size: 14px;
-  margin-left: 24px;
-  margin-right: 24px;
-  margin-bottom: 0;
-  color: #333;
-  font-weight: 400;
-}
-
 /*
 ==========================
 SIDE NAV
@@ -164,26 +144,32 @@ SIDE NAV
   font-size: 24px;
 }
 .sidenav .dropdown .dropdown-menu {
-  width: 100% !important;
+  background-color: #16425b;
+  color: #e9ede6;
+  font-weight: 700;
+  width: 140px;
 }
 .sidenav .dropdown .dropdown-menu.show {
-  left: 40px !important;
-  width: 100% !important;
+  left: 0 !important;
   font-weight: 400;
   font-size: 16px;
   line-height: 16px;
-  margin-left: 100px;
   border: 1px solid white;
 }
 .sidenav .dropdown .dropdown-menu.show .dropdown-header {
+  color: #e9ede6;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 14px;
   padding: 2px 4px;
-  color: #fff;
-  font-weight: 300;
-  font-size: 16px;
-  line-height: 16px;
 }
 .sidenav .dropdown .dropdown-menu.show .dropdown-item {
+  color: #e9ede6;
+  font-weight: 700;
   padding: 4px 4px;
+}
+.sidenav .dropdown .dropdown-menu.show .dropdown-item:hover {
+  color: #333;
 }
 .sidenav #new-channel, .sidenav #channel-options-hide {
   display: none;
