Updated workspace creation and display of available workspaces to users
Workspaces created by users are now added to the workspace links list
in the side nav panel. Currently users joining a workspace are sent to
the default Announcements channel. Future update will return users to
the last channel they visited in any workspace.

--- a/static/styles.css
+++ b/static/styles.css
@@ -186,14 +186,16 @@ SIDE NAV
 .sidenav #new-channel {
   height: 20vh;
 }
+.sidenav ul {
+  list-style-type: none;
+  margin-left: -40px;
+  margin-bottom: 10px;
+  overflow-y: auto;
+  overflow: hidden;
+}
 .sidenav ul.visible {
   height: 20vh;
   width: 200px;
-  list-style-type: none;
-  margin-left: -40px;
-  margin-bottom: 0;
-  overflow-y: auto;
-  overflow: hidden;
 }
 .sidenav li {
   font-weight: 400;
