--- a/static/styles.scss
+++ b/static/styles.scss
@@ -210,14 +210,17 @@ SIDE NAV
     height: 20vh;
   }
 
+  ul {
+    list-style-type: none;
+    margin-left: -40px;
+    margin-bottom: 10px;
+    overflow-y: auto;
+    overflow: hidden;
+  }
+
   ul.visible {
     height: 20vh;
     width: 200px;
-    list-style-type: none;
-    margin-left: -40px;
-    margin-bottom: 0;
-    overflow-y: auto;
-    overflow: hidden;
   }
 
   li {
