--- a/templates/index.html
+++ b/templates/index.html
@@ -68,6 +68,9 @@
         <h5>Current Channel:</h5>
         <h4 id="curr-channel"></h4>
       </div>
+      <div id="workspace-info">
+        <h5></h5><i class="fas fa-user"></i> <span id="workspace-users"></span></h5>
+      </div>
       <hr>
     </div>
 
