--- a/static/styles.css
+++ b/static/styles.css
@@ -232,7 +232,7 @@ CHAT ROOM
   left: 200px;
   top: 0px;
   width: 100%;
-  padding-top: 10px;
+  margin-top: 10px;
   z-index: 2;
   background-color: #f9f9f9;
 }
@@ -241,6 +241,11 @@ CHAT ROOM
 }
 #chatroom-panel #chatroom-header hr {
   margin: 0 0;
+}
+#chatroom-panel #chatroom-header #workspace-info {
+  position: fixed;
+  right: 20px;
+  top: 0px;
 }
 #chatroom-panel #messages {
   list-style-type: none;
