Several updates to workspace functionality when logging in and out
When a user logs in, it now uses their last workspace and channel (saved in DB)
to determine which workspace and channel to log the user into on sign in.

If that workspace or channel does not exist, the user is redirected to a default
workspace or channel.

Logging out now correctly removes a user from the workspace active user count, using
a combination of socketio logout event and redirect to the /logout flask route.

--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@
     </div>
     <hr>
     <footer>
-      <a href="/logout"><i class="fas fa-sign-out-alt"></i> Sign Out</a>
+      <a id="logout" href="#"><i class="fas fa-sign-out-alt"></i> Sign Out</a>
       <p class="footer-text">&copy; 2020 <a href="https://plcoster.github.io/homepage/index.html">P.L.Coster</a></p>
     </footer>
   </div>
