Hovering on messages in chat panel now displays relevant options to client
Now when a client hovers over a message it will display either edit
and delete options if it is their own message, or a private message link
if it is another user's message. Edit delete and private message functionality
to be added.

Index.hs refactored to better segregate various function types for readability

--- a/static/styles.css
+++ b/static/styles.css
@@ -276,6 +276,15 @@ CHAT ROOM
   font-weight: 300;
   font-size: 12px;
 }
+#chatroom-panel #messages .message-options {
+  display: none;
+}
+#chatroom-panel #messages .message-options a {
+  padding-right: 5px;
+}
+#chatroom-panel #messages .user-message:hover .message-options {
+  display: block;
+}
 #chatroom-panel #chat-input {
   position: fixed;
   left: 200px;
