--- a/templates/index.html
+++ b/templates/index.html
@@ -69,7 +69,7 @@
         <h4 id="curr-channel"></h4>
       </div>
       <div id="workspace-info">
-        <h5></h5><i class="fas fa-user"></i> <span id="workspace-users"></span></h5>
+        <h5></h5><i class="fas fa-users"></i> <span id="workspace-users"></span></h5>
       </div>
       <hr>
     </div>
@@ -100,10 +100,18 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.min.js"></script>
   <script id="message-template" type="text/template">
     {% raw -%}
-    <li>
+    <li class="user-message">
       <img class="profile-icon" src="/static/Images/profile/{{ image }}" alt="User Profile Image">
       <h5 class="message-username">{{ username }} <span class="message-date text-muted"> {{ date }} - <span data-livestamp="{{ timestamp }}"></span></span></h5>
       <p class="message-text">{{ message }}</p>
+      <p class="message-options">
+        {{# if client_message}}
+        <a href=''><i class="fas fa-pencil-alt"> </i> Edit Message</a>
+        <a href=''><i class="fas fa-trash-alt"> </i> Delete Message</a>
+        {{else}}
+        <a href='' class="private-message" data-user_id="{{ user_id }}"><i class="fas fa-user"></i> <span id="workspace-users"> Private Message</a>
+        {{/if}}
+      </p>
     </li>
     {%- endraw %}
   </script>
