Progress on private chats when clicking on private message button
Clicking private message button now generates correctly named links
for both users

--- a/static/styles.css
+++ b/static/styles.css
@@ -227,7 +227,7 @@ CHATROOM/PRIVATE CHANNELS
 ==========================
 */
 #private-panel {
-  width: 0px;
+  display: none;
 }
 
 #private-panel {
