--- a/templates/index.html
+++ b/templates/index.html
@@ -91,7 +91,7 @@
     <div id="chat-input">
       <hr>
       <form id="chat-input-form">
-        <input type="text" id="message" name="message" placeholder="Enter Your Message" autocomplete="off" required>
+        <input type="text" id="message" placeholder="Enter Your Message" autocomplete="off" required>
         <button id="send-chat-input">Send!</button>
       </form>
     </div>
@@ -125,8 +125,8 @@
     <div id="chat-input">
       <hr>
       <form id="chat-input-form">
-        <input type="text" id="message" name="message" placeholder="Enter Your Message" autocomplete="off" required>
-        <button id="send-chat-input">Send!</button>
+        <input type="text" id="private-message" placeholder="Enter Your Message" autocomplete="off" required>
+        <button id="send-private-input">Send!</button>
       </form>
     </div>
   </section>
