Fixed issue when editing and deleting messages
Current message text was not being correctly displayed on editing
a message immediately after an edit or deletion had been made.

This was corrected by switching from adding the text to be edited from
innerHTML to the textarea value.

--- a/templates/index.html
+++ b/templates/index.html
@@ -143,7 +143,7 @@
       <!-- Message Editor Form -->
       <form class="message-edit-form hidden">
         <label for="message-edit" class="sr-only">Message Editor</label>
-        <textarea class="message-edit" rows="2" autocomplete="off" required></textarea>
+        <textarea class="message-edit" rows="2" autocomplete="off" autocomplete="off" required></textarea>
         <p class="edit-options">
             <a href="#" class="edit-message" data-message_id="{{ message_id }}" data-timestamp="{{ timestamp }}"><i class="fas fa-check"> </i> Update Message</a>
             <a href="#" class="cancel-edit"><i class="fas fa-times"> </i> Cancel</a>
